<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">
<!--    tools:context=".ui.home.HomeFragment">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSearchFood"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#FF6F61"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="184dp"
                    android:layout_height="173dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="121dp"
                        android:layout_height="131dp"
                        android:contentDescription="@string/search_food"
                        android:src="@drawable/ic_search_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Search Food"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardDonate"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#6B5B95"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="181dp"
                    android:layout_height="171dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="116dp"
                        android:layout_height="119dp"
                        android:contentDescription="@string/donate"
                        android:src="@drawable/ic_mydonation" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Donate"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardUpdate"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#88B04B"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="181dp"
                    android:layout_height="168dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="133dp"
                        android:layout_height="109dp"
                        android:contentDescription="@string/update"
                        android:src="@drawable/ic_update" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Update"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardVolunteer"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                app:cardElevation="5dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="#FFB300"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="195dp"
                    android:layout_height="176dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="132dp"
                        android:layout_height="99dp"
                        android:contentDescription="@string/my_cart"
                        android:src="@drawable/ic_volunteer" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Volunteer"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardInquireDonations"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="5dp"
                    app:cardBackgroundColor="#008080"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="184dp"
                        android:layout_height="173dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="121dp"
                            android:layout_height="131dp"
                            android:contentDescription="@string/inquire_donations"
                            android:src="@drawable/ic_inquire_donations" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Inquire Donations"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Empty space to keep the card on the left -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
